--- a/hello/templates/auth.html
+++ b/hello/templates/auth.html
@@ -12,14 +12,16 @@ body{
 </head>
 <body>
     {{ state }}
-    <form action="/login/" method="post">{% csrf_token %}
+    {{ username }}
+    {{ password }}
+    <form action="/" method="post">{% csrf_token %}
         {% if next %}
         <input type="hidden" name="next" value="{{ next }}" />
         {% endif %}
         username: 
         <input type="text" name="username" value="{{ username}}" /><br />
         password:
-        <input type="password" name="password" value="" /><br />
+        <input type="password" name="password" value="{{ password }}" /><br />
 
         <input type="submit" value="Log In" />
     </form>
