--- a/hello/templates/delReserve.html
+++ b/hello/templates/delReserve.html
@@ -1,9 +1,22 @@
 {% extends "base.html" %}
 {% block content %}
 
-<form action="" method="post">{% csrf_token %}
-		
+
+<form action="" method="post">{% csrf_token %}	
+
+		{% if init%}
+		{{state}}: {{existReserve.book.name}}	
+        </br>Reservation Start Time : {{existReserve.reserved_start}}
+        </br>Resrvation ENd time : {{existReserve.reserved_end}}
+        </br>
 		<input type="submit" value="Delete the Resource" />
+
+		{% else %}
+		{{state}}
+		</br>
+		<a href="{% url 'hello.views.landing' %}">HOME</a>
+		{% endif %}
+
 </form>
 
 
