--- a/hello/templates/delReserve.html
+++ b/hello/templates/delReserve.html
@@ -9,7 +9,7 @@
         </br>Reservation Start Time : {{existReserve.reserved_start}}
         </br>Resrvation ENd time : {{existReserve.reserved_end}}
         </br>
-		<input type="submit" value="Delete the Resource" />
+		<input type="submit" value="Delete the Reservation" />
 
 		{% else %}
 		{{state}}
