--- a/hello/templates/auth.html
+++ b/hello/templates/auth.html
@@ -1,30 +1,48 @@
-{% extends "base.html" %}
-{% block content %}
-<!-- <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 <title>Log in</title>
 <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-<style>
-body{
-    font-family:Arial,Helvetica,sans-serif;
-    font-size: 12px;
-}
-</style>
-</head> -->
+<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+</head>
 
-    {{ state }}
-    <form action="/" method="post">{% csrf_token %}
-        {% if next %}
-        <input type="hidden" name="next" value="{{ next }}" />
-        {% endif %}
-        username: 
-        <input type="text" name="username" value="{{ username}}" /><br />
-        password:
-        <input type="password" name="password" value="{{ password }}" /><br />
+<body>
+  <div id="loginModal" class="modal show" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog">
+  <div class="modal-content">
+      <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+          <h1 class="text-center">Login</h1>
+      </div>
+      <div>
+        {{form.errors}}
+      </div>
+      <div class="modal-body">
+          <form class="form col-md-12 center-block" method="post" action="/">{% csrf_token %}
+            {% if next %}
+            <input type="hidden" name="next" value="{{ next }}" />
+            {% endif %}
+            <div class="form-group">
+              <input type="text" class="form-control input-lg" name = "username" placeholder="Username" value="{{ username}}"/>
+            </div>
+            <div class="form-group">
+              <input type="password" class="form-control input-lg" name="password" placeholder="Password" value="{{ password }}"/>
+            </div>
+            <div class="form-group">
+              <input type="submit" value="Log In" class="btn btn-primary btn-lg btn-block"/>
+              <span><a href="/register"><strong>Register</strong></a></span>
+            </div>
+          </form>
+      </div>
+      <div class="modal-footer">
+          <div class="col-md-12">
+          <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+          </div>    
+      </div>
+  </div>
+  </div>
+</div>
 
-        <input type="submit" value="Log In" />
-    </form>
-    
-    <a href="/register">Register</a>
-{% endblock %}
+</body>
