--- a/hello/templates/base.html
+++ b/hello/templates/base.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>GettingStarted</title>
+<title>BookReservation</title>
   <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+  {% load staticfiles %}
+  <script src="http://django-datetime-widget.asaglimbeni.me/static/js/bootstrap-datetimepicker.js"></script> 
+  <link href="http://django-datetime-widget.asaglimbeni.me/static/css/datetimepicker.css" rel="stylesheet" />
   <style type="text/css">
+
     .jumbotron {
         background: #532f8c;
         color: white;
@@ -44,16 +48,16 @@
   </style>
 </head>
 <body>
-<!-- <nav class="navbar navbar-default navbar-static-top navbar-inverse">
+<nav class="navbar navbar-default navbar-static-top navbar-inverse">
   <div class="container">
     <ul class="nav navbar-nav">
       <li class="active">
-        <a href="/"><span class="glyphicon glyphicon-home"></span> Home</a>
+        <a href="/landing"><span class="glyphicon glyphicon-home"></span> Book Reservation System</a>
       </li>
-      <li>
+      <!-- <li>
         <a href="https://devcenter.heroku.com/articles/how-heroku-works"><span class="glyphicon glyphicon-user"></span> How Heroku Works</a>
-      </li>
-      <li class="dropdown">
+      </li> -->
+      <!-- <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="glyphicon glyphicon-info-sign"></span> Getting Started Guides <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="https://devcenter.heroku.com/articles/getting-started-with-ruby">Getting Started with Ruby on Heroku</a></li>
@@ -72,10 +76,10 @@
     <ul class="nav navbar-nav navbar-right">
       <li class="navbar-right">
         <a href="https://devcenter.heroku.com"><span class="glyphicon glyphicon-book"></span> Heroku Dev Center</a>
-      </li>
+      </li> -->
     </ul>
   </div>
-</nav> -->
+</nav> 
 
 {% block content %}{% endblock %}
 
