--- a/hello/templates/register.html
+++ b/hello/templates/register.html
@@ -1,12 +1,22 @@
 {% extends "base.html" %}
-
+<nav class="navbar navbar-default navbar-static-top navbar-inverse">
+  <div class="container">
+    <ul class="nav navbar-nav">
+      <li class="active">
+        <a href=""><span class="glyphicon glyphicon-home"></span> Book Reservation System</a>
+      </li>
+    </ul>
+  </div>
+</nav> 
 {% block content %}
 
     <form method="post" action=".">{% csrf_token %}
-        <table border="0">
+        <table class = "table" border="0">
             {{ form.as_table }}
         </table>
-        <input type="submit" value="Register" />
+        
+        <input type="submit" class = "btn btn-default" value="Register" />
+       
     </form>
     <!-- <a href="/">Login</a> -->
 
