--- a/hello/templates/auth.html
+++ b/hello/templates/auth.html
@@ -13,7 +13,7 @@
   <div class="modal-dialog">
   <div class="modal-content">
       <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+          <!-- <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button> -->
           <h1 class="text-center">Login</h1>
       </div>
       <div class = "error">
@@ -36,11 +36,11 @@
             </div>
           </form>
       </div>
-      <div class="modal-footer">
+      <!-- <div class="modal-footer">
           <div class="col-md-12">
           <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
           </div>    
-      </div>
+      </div> -->
       
   </div>
   </div>
