--- a/hello/templates/success.html
+++ b/hello/templates/success.html
@@ -5,5 +5,5 @@
 {% block content %}
  Registration Completed Successfully
     Thank you for registering.
-    <!-- <a href="/">Login</a>  -->
+    <a href="/">Login</a>
 {% endblock %}
