--- a/hello/templates/auth.html
+++ b/hello/templates/auth.html
@@ -36,11 +36,11 @@
             </div>
           </form>
       </div>
-      <!-- <div class="modal-footer">
+      <div class="modal-footer">
           <div class="col-md-12">
-          <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+          <!-- <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button> -->
           </div>    
-      </div> -->
+      </div>
       
   </div>
   </div>
