--- a/hello/templates/editResource.html
+++ b/hello/templates/editResource.html
@@ -7,7 +7,7 @@
 		{% if init %}
 		{{state}}
 		{{form.as_p}}
-    <strong>Description Tags:</strong> <input type="texbox" name="descTags" maxlength="200" size="50"></br>
+    <strong>Description Tags:</strong> <input type="texbox" name="descTags" value = "" maxlength="200" size="50"></br>
 
        	<input type="submit" value="Edit the Book" />
        	{% else %}
