--- a/hello/templates/editResource.html
+++ b/hello/templates/editResource.html
@@ -16,7 +16,7 @@
         </br>Available End time : {{navail_end}}
         
         </br>
-         <a href="{% url 'hello.views.landing' %}">HOME</a>
+        <!-- <a href="{% url 'hello.views.landing' %}">HOME</a> -->
          {% endif %}
 </form>			
 
