--- a/hello/templates/landing.html
+++ b/hello/templates/landing.html
@@ -9,7 +9,7 @@ Books reserved by the {{user.username}}
     <tbody><tr>
     <th>Book Name</th>
     <th>Reservation Start</th>
-    <th>Reservation Start</th>
+    <th>Reservation End</th>
     <th>Duration</th>
     <th>Owner</th>
     <th>Delete?</th>
