--- a/hello/templates/showBook.html
+++ b/hello/templates/showBook.html
@@ -49,6 +49,9 @@
 
         Book Name: {{current_book.name}}
         </br>
+        Book Owner: <a href="/bookOwner/{{current_book.owner_user.id}}">{{current_book.owner_user.username}}</a> 
+        </br>
+        </br>
         Availability Start Time : {{current_book.avail_start}}
         </br>
         Availability Start Time : {{current_book.avail_end}}
