--- a/hello/templates/addReserve.html
+++ b/hello/templates/addReserve.html
@@ -4,9 +4,10 @@
 <form action="" method="post">{% csrf_token %}
 		{% if init %}
 		{{state}} : {{book.name}}	
+    </br>
 		{{form.as_table}}
 
-
+      </br>
        	<input type="submit" value="Add the Reservation" />
        	{% else %}
 
@@ -17,7 +18,7 @@
          {% else %}
         {{state}}: {{book}} 
         </br>Reservation Start Time : {{reserve_start}}
-        </br>Resrvation ENd time : {{reserve_end}}
+        </br>Resrvation Ed time : {{reserve_end}}
         </br>
         
 
