--- a/hello/templates/base.html
+++ b/hello/templates/base.html
@@ -6,8 +6,10 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   {% load staticfiles %}
-  <script src="http://django-datetime-widget.asaglimbeni.me/static/js/bootstrap-datetimepicker.js"></script> 
-  <link href="http://django-datetime-widget.asaglimbeni.me/static/css/datetimepicker.css" rel="stylesheet" />
+ <!-- <script src="http://django-datetime-widget.asaglimbeni.me/static/js/bootstrap-datetimepicker.js"></script> 
+  <link href="http://django-datetime-widget.asaglimbeni.me/static/css/datetimepicker.css" rel="stylesheet" />-->
+  <script src='{% static "js/bootstrap-datetimepicker.js" %}'></script>
+  <link href='{% static "css/datetimepicker.css" %}' rel="stylesheet" />
   <style type="text/css">
 
     .jumbotron {
