--- a/hello/templates/addBook.html
+++ b/hello/templates/addBook.html
@@ -9,7 +9,7 @@
 		{{form.as_p}}
 		<strong>Description Tags:</strong> <input type="texbox" name="descTags" maxlength="200" size="50"></br>
 		</br>
-       	<input type="submit" value="Add the Book" />
+       	<input class = "btn-default" type="submit" value="Add the Book" />
 
        	{% else %}
        	{{state}}
