--- a/hello/templates/landing.html
+++ b/hello/templates/landing.html
@@ -69,7 +69,7 @@ Books Owned by the User</br>
 		</tbody>
 	</table>
 	</br>
- <input type="submit" value="Add a Book" />
+ <input type="submit" class = "btn-primary" value="Add a Book" />
 	</form>
 
 
