--- a/hello/templates/showBook.html
+++ b/hello/templates/showBook.html
@@ -40,7 +40,7 @@
 
     <a href="/{{current_book.book_id}}/rssFeed">RSS LINK</a> </br>
 	</br>
-	        <input type="submit" value="Edit the Resource" />
+	        <input type="submit" class = "btn-primary" value="Edit the Resource" />
 </form>
 
 {% else %}
@@ -80,7 +80,7 @@
 Tag Descriptors:{% for x in allTags %} <a href="{{x.tag.tag_id}}/showTag">{{x.tag.tag_name}}</a>{% endfor %}</br> 
 
 <a href="/{{current_book.book_id}}/rssFeed">RSS LINK</a> </br>
-        <input type="submit" value="Add A Reservation" />
+        <input type="submit" value = "btn-primary" value="Add A Reservation" />
 </form>
 {% endif %}
 {% endblock %}
