--- a/hello/templates/success.html
+++ b/hello/templates/success.html
@@ -5,5 +5,6 @@
 {% block content %}
  Registration Completed Successfully
     Thank you for registering.
-    <a href="/">Login</a>
+    </br>
+    <a class = "btn-default" href="/">Login</a>
 {% endblock %}
