--- a/hello/templates/landing.html
+++ b/hello/templates/landing.html
@@ -5,7 +5,7 @@
 <form action="addBook/" method="post">{% csrf_token %}
 Books reserved by the {{user.username}}
 </br>
-	<table border="1" cellpadding="3" id="printTable" >
+	<table class = "table" border="1" cellpadding="3" id="printTable" >
     <tbody><tr>
     <th>Book Name</th>
     <th>Reservation Start</th>
@@ -32,7 +32,7 @@ Books reserved by the {{user.username}}
     </br>
 
 Total Available Books</br> 
-	<table border="1" cellpadding="3" id="printTable">
+	<table class = "table" border="1" cellpadding="3" id="printTable">
 		<tbody>
 			<tr>
 				<th>Book Name</th>
@@ -54,7 +54,7 @@ Total Available Books</br>
 
 Books Owned by the User</br>
 
-<table border="1" cellpadding="3" id="printTable">
+<table class = "table" border="1" cellpadding="3" id="printTable">
 		<tbody>
 			<tr>
 				<th>Book Name</th>
