--- a/hello/templates/showBook.html
+++ b/hello/templates/showBook.html
@@ -14,7 +14,7 @@
         </br>
         Availability Start Time : {{current_book.avail_end}}
         
-        <table border="1" cellpadding="3" id="printTable">
+        <table class = "table" border="1" cellpadding="3" id="printTable">
     <tbody><tr>
     <th>Reservation Start</th>
     <th>Reservation End</th>
@@ -56,7 +56,7 @@
         </br>
         Availability Start Time : {{current_book.avail_end}}
         
-        <table border="1" cellpadding="3" id="printTable">
+        <table class = "table" border="1" cellpadding="3" id="printTable">
     <tbody><tr>
     <th>Reservation Start</th>
     <th>Reservation End</th>
