--- a/hello/templates/bookOwner.html
+++ b/hello/templates/bookOwner.html
@@ -4,7 +4,7 @@
 
 Reservations of the user </br>
 
-<table border="1" cellpadding="3" id="printTable">
+<table class = "table" border="1" cellpadding="3" id="printTable">
     <tbody><tr>
     <th>Book Name</th>
     <th>Reservation Start</th>
@@ -32,7 +32,7 @@ Reservations of the user </br>
 
     Books Owned by the User</br>
 
-<table border="1" cellpadding="3" id="printTable">
+<table class = "table" border="1" cellpadding="3" id="printTable">
 		<tbody>
 			<tr>
 				<th>Book Name</th>
