--- a/hello/templates/landing.html
+++ b/hello/templates/landing.html
@@ -58,11 +58,15 @@ Books Owned by the User</br>
 		<tbody>
 			<tr>
 				<th>Book Name</th>
+				<th>Availability Start</th>
+				<th>Avalability End</th>
 			</tr>
 			
 				{% for books in book_own %}
 				</tr>
 					<td><a href="{{books.book_id}}">{{books.name}}</a></td>
+					<td>{{books.avail_start}}</td>
+					<td>{{books.avail_end}}</td>
 				</tr>
 				{% endfor %}
 			
