--- a/hello/templates/bookOwner.html
+++ b/hello/templates/bookOwner.html
@@ -41,6 +41,8 @@ Reservations of the user </br>
 				{% for books in books %}
 				</tr>
 					<td><a href="{{books.book_id}}">{{books.name}}</a></td>
+					<td>{{books.avail_start}}</td>
+					<td>{{books.avail_end}}</td>
 				</tr>
 				{% endfor %}
 			
