--- a/hello/templates/auth.html
+++ b/hello/templates/auth.html
@@ -17,7 +17,7 @@
           <h1 class="text-center">Login</h1>
       </div>
       <div class = "error">
-      {{state}}
+      <!-- <h3>{{state}}</h3> -->
       </div>
       <div class="modal-body">
           <form class="form col-md-12 center-block" method="post" action="/">{% csrf_token %}
