--- a/hello/templates/bookOwner.html
+++ b/hello/templates/bookOwner.html
@@ -36,6 +36,8 @@ Reservations of the user </br>
 		<tbody>
 			<tr>
 				<th>Book Name</th>
+				<th>Availability Start</th>
+				<th>Availability End</th>
 			</tr>
 			
 				{% for books in books %}
