--- a/hello/templates/showBook.html
+++ b/hello/templates/showBook.html
@@ -5,7 +5,7 @@
 
 <form action="{{current_book.book_id}}/editResource/" method="post">{% csrf_token %}
 
-        Book Name: {{current_book.name}}
+       <strong> Book Name: {{current_book.name}}</strong>
         </br>
         Book Owner: <a href="/bookOwner/{{current_book.owner_user.id}}">{{current_book.owner_user.username}}</a> 
         </br>
@@ -45,7 +45,7 @@
  
 <form action="{{current_book.book_id}}/addReserve/" method="post">{% csrf_token %}
 
-        Book Name: {{current_book.name}}
+      <strong>  Book Name: {{current_book.name}}</strong>
         </br>
         Book Owner: <a href="/bookOwner/{{current_book.owner_user.id}}">{{current_book.owner_user.username}}</a> 
         </br>
