--- a/hello/templates/bookOwner.html
+++ b/hello/templates/bookOwner.html
@@ -40,7 +40,7 @@ Reservations of the user </br>
 			
 				{% for books in books %}
 				</tr>
-					<td><a href="{{books.book_id}}">{{books.name}}</a></td>
+					<td><a href="landing/{{books.book_id}}">{{books.name}}</a></td>
 					<td>{{books.avail_start}}</td>
 					<td>{{books.avail_end}}</td>
 				</tr>
