--- a/hello/templates/bookOwner.html
+++ b/hello/templates/bookOwner.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-Reservations of the user </br>
+Reservations of {{user.username}} </br>
 
 <table class = "table" border="1" cellpadding="3" id="printTable">
     <tbody><tr>
@@ -28,7 +28,7 @@ Reservations of the user </br>
     </br>
 
 
-    Books Owned by the User</br>
+    Books Owned by {{user.username}}</br>
 
 <table class = "table" border="1" cellpadding="3" id="printTable">
 		<tbody>
@@ -40,7 +40,7 @@ Reservations of the user </br>
 			
 				{% for books in books %}
 				</tr>
-					<td><a href="landing/{{books.book_id}}">{{books.name}}</a></td>
+					<td><a href="/landing/{{books.book_id}}">{{books.name}}</a></td>
 					<td>{{books.avail_start}}</td>
 					<td>{{books.avail_end}}</td>
 				</tr>
